# dashboard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.docker-compose.yml  pyproject.toml  requierements.txt
.github/workflows/: publish.yml
src/: main.py
src/application/dto/: socials.py
src/application/interactors/: dashboard_interactor.py
src/application/interfaces/: task_sheduler.py  uow.py
src/core/: logger.py
src/domain/entities/: connection.py  dashboard.py  dashboard_entity.py
src/infrastructure/: exceptions.py
src/infrastructure/config/: config_loader.py  config_storage.py
src/infrastructure/connections/: __init__.py  base.py  facebook.py  instagram.py  linkedin.py  social_factory.py  twitter.py  youtube.py
src/infrastructure/external_service/: poller.py  server_api.py
src/infrastructure/ioc_container/: __init__.py  http_provider.py  interactor_provider.py  logger_provier.py  session_provider.py
src/infrastructure/postgres/: tables.py  uow.py
src/infrastructure/postgres/repositories/: base_repo.py  dashboard_repo.py  publications_repo.py
src/infrastructure/taskiq/: task_scheduler.py
src/presentation/task_iq/: main.py  tasks.py
tests/: conftest.py  pytest.ini  test.docker-compose.yml
tests/fixtures/: config.py  database.py  entities.py  postgres.py  server_api.py
tests/src/application/: test_dashboard_interactor.py
tests/src/infrastructure/connections/: test_facebook.py  test_instagram.py  test_linkedin.py  test_social_factory.py  test_twitter.py  test_youtube.py
tests/src/infrastructure/postgres/: test_db.py
tests/src/infrastructure/postgres/repositories/: test_dashboard_repo.py  test_publication_repo.py
tests/src/presentation/taskiq/: test_tasks_dashboard.py
