[project]
name = "dashboard"
version = "0.1.0"
description = "модуль статистики"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "backports-asyncio-runner==1.2.0",
    "black==25.9.0",
    "click==8.3.0",
    "exceptiongroup==1.3.0",
    "faker==37.12.0",
    "greenlet==3.2.4",
    "iniconfig==2.3.0",
    "loguru==0.7.3",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytokens==0.2.0",
    "ruff==0.14.3",
    "sqlalchemy==2.0.44",
    "structlog>=25.5.0",
    "tomli==2.3.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
]
