[project]
name = "dashboard"
version = "0.1.0"
description = "модуль статистики"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "backports-asyncio-runner==1.2.0",
    "black==25.9.0",
    "click==8.3.0",
    "dishka>=1.7.2",
    "dotenv>=0.9.9",
    "exceptiongroup==1.3.0",
    "faker==37.12.0",
    "greenlet==3.2.4",
    "iniconfig==2.3.0",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytokens==0.2.0",
    "ruff==0.14.3",
    "sqlalchemy==2.0.44",
    "structlog>=25.5.0",
    "taskiq>=0.11.20",
    "taskiq-aio-pika>=0.4.4",
    "tomli==2.3.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
]
